--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
-Django>=5.0,<6.0
-djangorestframework>=3.14,<4.0
-dj-database-url>=2.1,<3.0
-gunicorn>=21.2,<22.0
-psycopg2-binary>=2.9,<3.0
-python-dotenv>=1.0,<2.0
-whitenoise>=6.6,<7.0
+asgiref==3.10.0
+dj-database-url==2.3.0
+Django==5.2.7
+djangorestframework==3.16.1
+gunicorn==21.2.0
+packaging==25.0
+psycopg2-binary==2.9.11
+python-dotenv==1.1.1
+sqlparse==0.5.3
+typing_extensions==4.15.0
+tzdata==2025.2
+whitenoise==6.11.0
